news api integration -c

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 
-<body style="margin: 0; padding:0;">
-    <h3 style="background-color: red; margin:0; padding:0; ">hiiiiiiiiiiiii</h3>
+<body>
+    <div id="root"></div>
 </body>
 
 </html>
